# Anagram-solver

./: .gitignore  CMakeLists.txt  README.md
src/: Solver.cpp  Solver.h  Timer.cpp  Timer.h  Words_75K_PreSubmissionTesting.csv  main.cpp
